--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "chiropterm"
 version = "0.1.0"
+authors = ["Nyeogmi <economicsbat@gmail.com>"]
+description = "bat-themed fake terminal in the style of libtcod"
+readme = "README.md"
+homepage = "https://github.com/nyeogmi/chiropterm"
+repository = "https://github.com/nyeogmi/chiropterm"
+license = "MIT or Apache-2.0"
+# TODO, keywords, categories?
 edition = "2018"
-resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
