--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+enum-map = "1.1.1"
+euclid = "0.22.6"
 lazy_static = "1.4"
 minifb = "0.19.3"
-euclid = "0.22.6"
 gridd-euclid = "0.1.3"
 
 [[example]]
