--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ euclid = "0.22.6"
 lazy_static = "1.4"
 minifb = "0.19.3"
 gridd-euclid = "0.1.3"
+textwrap = "0.15"
 
 [[example]]
 name = "example"
